--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ section {
     margin: 0 5px;
 }
 
-form button {
+.hero-form button {
     color: #fce138;
     background-color: #024e76;
     border: none;
