--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,7 +216,7 @@ section {
 .trainer-bio p {
   font-size: 17px;
   line-height: 1.3;
-} 
+}
 
 .text-left {
   text-align: left;
@@ -226,9 +226,10 @@ section {
   text-align: right;
 }
 
+/* REACH OUT STYLES START */
 .contact {
-  background: #024e76;
   text-align: center;
+  background: #024e76;
 }
 
 .contact h2 {
@@ -254,9 +255,10 @@ section {
   font-size: 32px;
 }
 
-.contact-info p, .contact-info address {
-  line-height: 1.5;
+.contact-info p,
+.contact-info address {
   margin: 20px 0;
+  line-height: 1.5;
   font-size: 20px;
   font-style: normal;
 }
